# TETRA_S_model_ROS2_3D-SLAM

./: README.md  collision_monitor.sh
tetra/: package.xml
tetra/src/: tetra.cpp
tetra_bringup/: package.xml
tetra_bringup/launch/: tetra_3d_bringup.launch.py  tetra_bringup.launch.py
tetra_description/urdf/: base.urdf.xacro  tetra.xacro
tetra_interface/: package.xml
tetra_navigation2/launch/: 3d_localization_launch.py  navigation_launch.py  tetra_3d_navigation.launch.py  tetra_navigation.launch.py
tetra_navigation2/maps/: 95832d90-2ed1-11f0-ab83-859a97d20cfe.pgm  95832d90-2ed1-11f0-ab83-859a97d20cfe.yaml  office.pgm  office.yaml
tetra_navigation2/maps/backup/: office.pgm  office.yaml
tetra_navigation2/params/: navigation (Copy).yaml  navigation.yaml  navigation_2d.yaml
tetra_navigation2/rviz/: tetra_3d_navigation2.rviz  tetra_navigation2.rviz
tetra_rtabmap/: CMakeLists.txt  package.xml
tetra_rtabmap/config/: rtabmap_params.yaml
tetra_rtabmap/launch/: tetra_rtabmap.launch (Copy).py  tetra_rtabmap.launch (Service and nav2 integration launch).py  tetra_rtabmap.launch.py
tetra_rtabmap/rviz/: rtabmap_mapping.rviz  tetra_3d_navigation2.rviz
tetra_service/: package.xml
tetra_service/src/: tetra_service.cpp
virtual_wall/: CMakeLists.txt  package.xml
